# RK

./: .gitmodules  CMakeLists.txt  CPack.cmake  README.md  RealWorldFactoryMethod.cpp  Testy.cpp
.github/workflows/: artifacts.yml  ci.yml  main.yml  testCpack.yml  ttest .yml
Example1/: CMakeLists.txt
Example2/: CMakeLists.txt
_build/: CMakeCache.txt  Makefile  cmake_install.cmake
